--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         }
         
         .section{
-          background-color: white;
+          background-color: gray;
         }
 
         .chart{
