--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta property="og:title" content="Morioka: Hidden Gem Chosen by the New York Times" />
     <meta property="og:description" content="website introduces Morioka, Japan" />
-    <meta property="og:image" content="https://mymo5303.github.io/project01-suicide/23665645_s.jpg" />
+    <meta property="og:image" content="https://mymo5303.github.io/destinationmorioka/" />
     <title>"Morioka: Hidden Gem Chosen by the New York Times"</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" />
     
@@ -102,7 +102,7 @@
 
       <div class="content"></div>
 
-        <p>By Mayumi Oshige  |  July 7, 2023  |</credit>  <a href="LINK TO YOUR GITHUB REPO" target="_blank"><u><a>Github</a></u></a></p>
+        <p>By Mayumi Oshige  |  July 7, 2023  |</credit>  <a href="https://github.com/MYMO5303/destinationmorioka" target="_blank"><u><a>Github</a></u></a></p>
       <div class="space"></div>
 
         <p>When you think of traveling to Japan, the first tourist destination that comes to mind is probably Metropolitan Tokyo, historical and traditional Kyoto or neighboring Osaka. Perhaps, Okinawa which is a resort island known for the U.S. military bases, Hiroshima or Hokkaido if you try your best to think of it.</P>
