--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
       <div class="content"></div>
 
-        <p>By Mayumi Oshige  |  July 7, 2023  |</credit>  <a href="https://github.com/MYMO5303/destinationmorioka" target="_blank"><u><a>Github</a></u></a></p>
+        <p>By Mayumi Oshige  |  July 7, 2023  |<a href= "https://github.com/MYMO5303/destinationmorioka" target="_blank"><u><a>Github</a></u></a></p>
       <div class="space"></div>
 
         <p>When you think of traveling to Japan, the first tourist destination that comes to mind is probably Metropolitan Tokyo, historical and traditional Kyoto or neighboring Osaka. Perhaps, Okinawa which is a resort island known for the U.S. military bases, Hiroshima or Hokkaido if you try your best to think of it.</P>
