--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <div class="subtitle">Picking Up Accommodations in the City with a Growing Tourist Population</div>
 
       <figure>
-        <img src="岩手山と開運橋②.jpg" alt="Picture that shows Mt. Iwate and theKaiun Bridge">
+        <img src="岩手山と開運橋②.jpg" alt="Picture that shows Mt. Iwate and the Kaiun Bridge">
         <figcaption>View of Mt. Iwate and the Kaiun Bridge over the Kitakami River in Morioka |岩手県観光協会</figcaption>
       </figure>
 
@@ -143,7 +143,7 @@
         <div class="row-container">
           <div class="column-container">
             <figure class="side_image">
-              <figure class="image is-128x128"><img src="IMG_1300.jpg"></figure>
+              <figure class="image is-128x128"><img src="IMG_1300.jpg" alt="Drawing image of a foreign tourist visiting Japan"></figure>
             </figure>
           </div>
           <div class="column-container">
@@ -163,7 +163,8 @@
           snowy.</p>
         <div class="space"></div>
         <div class="chart">
-          <iframe title="Hotels are concentrated in front of Morioka station" aria-label="Locator maps" id="datawrapper-chart-A3ec2" src="https://datawrapper.dwcdn.net/A3ec2/9/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="589" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+          <iframe title="Hotels are concentrated in front of Morioka station" aria-label="Locator maps" id="datawrapper-chart-A3ec2" 
+          src="https://datawrapper.dwcdn.net/A3ec2/9/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="589" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
           </script>
     
         </div>
