--- a/index.html
+++ b/index.html
@@ -212,7 +212,8 @@
           effort to ensure that Morioka remains an attractive city”.</p>
         <div class="space"></div>
         <p>This article was written by Mayumi Oshige and the drawing is by Elizabeth Dempsey. If you have any
-          question...</p>
+          question, contact me at  <a href="mailtp:mayumioshige@gmail.com">mayumioshige@gmail.com</a>
+        </p>
         <div class="space"></div>
         <div class="space"></div>
         <div class="space"></div>
