--- a/index.html
+++ b/index.html
@@ -162,9 +162,16 @@
           area of about 900 square kilometers — roughly two-thirds the size of New York City. Winters are cold and
           snowy.</p>
         <div class="space"></div>
+
         <div class="chart">
-          <iframe title="Hotels are concentrated in front of Morioka station" aria-label="Locator maps" id="datawrapper-chart-A3ec2" 
-          src="https://datawrapper.dwcdn.net/A3ec2/9/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="589" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+          <iframe title="Morioka is located in northeastern Japan"
+          alt="A Japan map with the points of loaction of Morioka, Tokyo, Kyoto, Osaka, Hiroshima and Hokkaido"
+          aria-label="Locator maps" id="datawrapper-chart-3k6tN" 
+          src="https://datawrapper.dwcdn.net/3k6tN/3/" 
+          scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" 
+          height="446" data-external="1"></iframe>
+
+          <script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
           </script>
     
         </div>
@@ -185,6 +192,7 @@
         <div class="space"></div>
         <div class="chart">
           <iframe title="The number of foreign visitors to Japan had been growing until Covid-19"
+            alt="A interactive line chart that shows the number of foreign visitors to Japan since 1964 to 2021"
             aria-label="Interactive line chart" id="datawrapper-chart-8yFoJ"
             src="https://datawrapper.dwcdn.net/8yFoJ/2/" scrolling="yes" frameborder="0"
             style="width: 0; min-width: 100% !important; border: none;" height="400" data-external="1"></iframe>
@@ -201,6 +209,7 @@
         <div class="space"></div>
         <div class="chart">
           <iframe title="Hotels are moslty located around the station" aria-label="Locator maps"
+            alt="A map that shows the location of hotels in Morioka"
             id="datawrapper-chart-A3ec2" src="https://datawrapper.dwcdn.net/A3ec2/4/" scrolling="no" frameborder="0"
             style="width: 0; min-width: 100% !important; border: none;" height="562" data-external="1"></iframe>
           <script type="text/javascript">!function () { "use strict"; window.addEventListener("message", (function (a) { if (void 0 !== a.data["datawrapper-height"]) { var e = document.querySelectorAll("iframe"); for (var t in a.data["datawrapper-height"]) for (var r = 0; r < e.length; r++)if (e[r].contentWindow === a.source) { var i = a.data["datawrapper-height"][t] + "px"; e[r].style.height = i } } })) }();
