--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
           effort to ensure that Morioka remains an attractive city”.</p>
         <div class="space"></div>
 
-        <div class="credit2">This article was written by Mayumi Oshige and the drawing is by Elizabeth Dempsey. If you have any
+        <div class="subtitle">This article was written by Mayumi Oshige and the drawing is by Elizabeth Dempsey. If you have any
           questions, contact me at  <a href="mailtp:mayumioshige@gmail.com">mayumioshige@gmail.com</a>
         </div>
         <div class="space"></div>
