--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
               </figure>
             </div>
             <div class="column">
-              <p><strong>Morioka? Where is that?</strong>No wonder if you think that way. Even Japanese
+              <p><strong>Morioka? Where is that? </strong>No wonder if you think that way. Even Japanese
                 were surprised by the result because Morioka was rather taken as one of the ordinary mid sized cities that
                 exist all over Japan.</p>
             </div>
@@ -216,9 +216,9 @@
 
         <div class="container">
           <div class="example2">
-            <img src="Bank of Iwate.jpg" alt="">
-            <img src="Wanko Soba.jpg" alt="">
-            <img src="Morioka Park Summer.jpg" alt="">
+            <img src="Bank of Iwate.jpg" alt="Image of the Bank of Iwate's red brick building">
+            <img src="Wanko Soba.jpg" alt="Image of a style of eating soba noodle in Iwate">
+            <img src="Morioka Park Summer.jpg" alt="Image of Morioka park in early summer">
           </div>
         </div>
        <div class="space"></div>
@@ -231,9 +231,9 @@
 
         <div class="container">
           <div class="example2">
-            <img src="Morioka Fireworks.jpg" alt="">
-            <img src="Reimen.jpg" alt="">
-            <img src="Morioka Park Winter.jpg" alt="">
+            <img src="Morioka Fireworks.jpg" alt="Image that shows fireworks in Morioka">
+            <img src="Reimen.jpg" alt="Image of Morioka signature noodle">
+            <img src="Morioka Park Winter.jpg" alt="Image of Morioka park in snow">
           </div>
         </div>
 
@@ -280,7 +280,7 @@
           effort to ensure that Morioka remains an attractive city”.</p>
         <div class="space"></div>
 
-        <div class="credit2">This article was written by Mayumi Oshige and the drawing is by Elizabeth Dempsey. If you have any
+        <div class="credit">This article was written by Mayumi Oshige and the drawing is by Elizabeth Dempsey. If you have any
           questions, contact me at  <a href="mailtp:mayumioshige@gmail.com">mayumioshige@gmail.com</a>
         </div>
         <div class="space"></div>
