--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <div class="space"></div>
 
         <p>The New York Times chose Morioka because of its combination of kindness, cuisine, walkability and history.
-          (Read the New York Times article for more details). Indeed, Tokyo and Kyoto are so crowded that they are
+          (Read the <a href="https://www.nytimes.com/interactive/2023/travel/52-places-travel-2023.html"><u>New York Times</u></a> article for more details). Indeed, Tokyo and Kyoto are so crowded that they are
           tiresome and difficult to walk around.</p>
         <div class="space"></div>
 
@@ -238,10 +238,10 @@
         </div>
 
        <div class="space"></div>
-        <p>According to the local News, the number of foreign tourists to Morioka has been slowly
+        <p>According to the local report, the number of foreign tourists to Morioka has been slowly
           increasing after the New York Times article appeared. A new tourist information center was reportedly set up
           in front of Morioka Station. The number of foreign tourists visiting Japan had been growing rapidly before
-          Corona. In May, COVID was downgraded to a non-threatening status and visits have been on a recovery trend.</p>
+          the pandemic. In May, Covid-19 was downgraded to a non-threatening status and visits have been on a recovery trend.</p>
         <div class="space"></div>
         <div class="chart">
           <iframe title="The number of foreign visitors to Japan had been growing until Covid-19"
