--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:title" content="Morioka: Hidden Gem Chosen by the New York Times" />
   <meta property="og:description" content="website introduces Morioka, Japan" />
-  <meta property="og:image" content="Mount Iwate and Kaiun Bridge.jpg" />
+  <meta property="og:image" content="https://github.com/MYMO5303/project02-destinationmorioka" />
   <title>"Morioka: Hidden Gem Chosen by the New York Times"</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" />
 
